fix: Fix overflow and height 100vh in reviews

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -218,9 +218,7 @@
     .header {
         padding-bottom: 50px;
     }
-    .header-reviews {
-        padding-bottom: 0;
-    }
+   
 
     .header__wrapper {
         justify-content: center;
